--- a/02-experiment-tracking/homework/week2_hw.ipynb
+++ b/02-experiment-tracking/homework/week2_hw.ipynb
@@ -525,12 +525,193 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connection.py\", line 174, in _new_conn\n",
+      "    conn = connection.create_connection(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/util/connection.py\", line 95, in create_connection\n",
+      "    raise err\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/util/connection.py\", line 85, in create_connection\n",
+      "    sock.connect(sa)\n",
+      "ConnectionRefusedError: [Errno 111] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 703, in urlopen\n",
+      "    httplib_response = self._make_request(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 398, in _make_request\n",
+      "    conn.request(method, url, **httplib_request_kw)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connection.py\", line 239, in request\n",
+      "    super(HTTPConnection, self).request(method, url, body=body, headers=headers)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 1285, in request\n",
+      "    self._send_request(method, url, body, headers, encode_chunked)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 1331, in _send_request\n",
+      "    self.endheaders(body, encode_chunked=encode_chunked)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 1280, in endheaders\n",
+      "    self._send_output(message_body, encode_chunked=encode_chunked)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 1040, in _send_output\n",
+      "    self.send(msg)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 980, in send\n",
+      "    self.connect()\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connection.py\", line 205, in connect\n",
+      "    conn = self._new_conn()\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connection.py\", line 186, in _new_conn\n",
+      "    raise NewConnectionError(\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7f4bbd773760>: Failed to establish a new connection: [Errno 111] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/requests/adapters.py\", line 440, in send\n",
+      "    resp = conn.urlopen(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 813, in urlopen\n",
+      "    return self.urlopen(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 813, in urlopen\n",
+      "    return self.urlopen(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 813, in urlopen\n",
+      "    return self.urlopen(\n",
+      "  [Previous line repeated 2 more times]\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 785, in urlopen\n",
+      "    retries = retries.increment(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/util/retry.py\", line 592, in increment\n",
+      "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='127.0.0.1', port=5000): Max retries exceeded with url: /api/2.0/mlflow/experiments/get-by-name?experiment_name=random-forest-hyperopt (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4bbd773760>: Failed to establish a new connection: [Errno 111] Connection refused'))\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/utils/rest_utils.py\", line 151, in http_request\n",
+      "    return _get_http_response_with_retries(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/utils/rest_utils.py\", line 91, in _get_http_response_with_retries\n",
+      "    return session.request(method, url, **kwargs)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/requests/sessions.py\", line 529, in request\n",
+      "    resp = self.send(prep, **send_kwargs)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/requests/sessions.py\", line 645, in send\n",
+      "    r = adapter.send(request, **kwargs)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/requests/adapters.py\", line 519, in send\n",
+      "    raise ConnectionError(e, request=request)\n",
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='127.0.0.1', port=5000): Max retries exceeded with url: /api/2.0/mlflow/experiments/get-by-name?experiment_name=random-forest-hyperopt (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4bbd773760>: Failed to establish a new connection: [Errno 111] Connection refused'))\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/store/tracking/rest_store.py\", line 285, in get_experiment_by_name\n",
+      "    response_proto = self._call_endpoint(GetExperimentByName, req_body)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/store/tracking/rest_store.py\", line 56, in _call_endpoint\n",
+      "    return call_endpoint(self.get_host_creds(), endpoint, method, json_body, response_proto)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/utils/rest_utils.py\", line 249, in call_endpoint\n",
+      "    response = http_request(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/utils/rest_utils.py\", line 163, in http_request\n",
+      "    raise MlflowException(\"API request to %s failed with exception %s\" % (url, e))\n",
+      "mlflow.exceptions.MlflowException: API request to http://127.0.0.1:5000/api/2.0/mlflow/experiments/get-by-name failed with exception HTTPConnectionPool(host='127.0.0.1', port=5000): Max retries exceeded with url: /api/2.0/mlflow/experiments/get-by-name?experiment_name=random-forest-hyperopt (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4bbd773760>: Failed to establish a new connection: [Errno 111] Connection refused'))\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connection.py\", line 174, in _new_conn\n",
+      "    conn = connection.create_connection(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/util/connection.py\", line 95, in create_connection\n",
+      "    raise err\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/util/connection.py\", line 85, in create_connection\n",
+      "    sock.connect(sa)\n",
+      "ConnectionRefusedError: [Errno 111] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 703, in urlopen\n",
+      "    httplib_response = self._make_request(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 398, in _make_request\n",
+      "    conn.request(method, url, **httplib_request_kw)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connection.py\", line 239, in request\n",
+      "    super(HTTPConnection, self).request(method, url, body=body, headers=headers)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 1285, in request\n",
+      "    self._send_request(method, url, body, headers, encode_chunked)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 1331, in _send_request\n",
+      "    self.endheaders(body, encode_chunked=encode_chunked)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 1280, in endheaders\n",
+      "    self._send_output(message_body, encode_chunked=encode_chunked)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 1040, in _send_output\n",
+      "    self.send(msg)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/http/client.py\", line 980, in send\n",
+      "    self.connect()\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connection.py\", line 205, in connect\n",
+      "    conn = self._new_conn()\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connection.py\", line 186, in _new_conn\n",
+      "    raise NewConnectionError(\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7f4bbd784ee0>: Failed to establish a new connection: [Errno 111] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/requests/adapters.py\", line 440, in send\n",
+      "    resp = conn.urlopen(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 813, in urlopen\n",
+      "    return self.urlopen(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 813, in urlopen\n",
+      "    return self.urlopen(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 813, in urlopen\n",
+      "    return self.urlopen(\n",
+      "  [Previous line repeated 2 more times]\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 785, in urlopen\n",
+      "    retries = retries.increment(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/urllib3/util/retry.py\", line 592, in increment\n",
+      "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='127.0.0.1', port=5000): Max retries exceeded with url: /api/2.0/mlflow/experiments/list?view_type=ALL (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4bbd784ee0>: Failed to establish a new connection: [Errno 111] Connection refused'))\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/utils/rest_utils.py\", line 151, in http_request\n",
+      "    return _get_http_response_with_retries(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/utils/rest_utils.py\", line 91, in _get_http_response_with_retries\n",
+      "    return session.request(method, url, **kwargs)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/requests/sessions.py\", line 529, in request\n",
+      "    resp = self.send(prep, **send_kwargs)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/requests/sessions.py\", line 645, in send\n",
+      "    r = adapter.send(request, **kwargs)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/requests/adapters.py\", line 519, in send\n",
+      "    raise ConnectionError(e, request=request)\n",
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='127.0.0.1', port=5000): Max retries exceeded with url: /api/2.0/mlflow/experiments/list?view_type=ALL (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4bbd784ee0>: Failed to establish a new connection: [Errno 111] Connection refused'))\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/mlops-zoomcamp/02-experiment-tracking/homework/hpo.py\", line 13, in <module>\n",
+      "    mlflow.set_experiment(\"random-forest-hyperopt\")\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/tracking/fluent.py\", line 110, in set_experiment\n",
+      "    experiment = client.get_experiment_by_name(experiment_name)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/tracking/client.py\", line 462, in get_experiment_by_name\n",
+      "    return self._tracking_client.get_experiment_by_name(name)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/tracking/_tracking_service/client.py\", line 162, in get_experiment_by_name\n",
+      "    return self.store.get_experiment_by_name(name)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/store/tracking/rest_store.py\", line 297, in get_experiment_by_name\n",
+      "    for experiment in self.list_experiments(ViewType.ALL):\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/store/tracking/rest_store.py\", line 77, in list_experiments\n",
+      "    response_proto = self._call_endpoint(ListExperiments, req_body)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/store/tracking/rest_store.py\", line 56, in _call_endpoint\n",
+      "    return call_endpoint(self.get_host_creds(), endpoint, method, json_body, response_proto)\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/utils/rest_utils.py\", line 249, in call_endpoint\n",
+      "    response = http_request(\n",
+      "  File \"/home/ubuntu/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/utils/rest_utils.py\", line 163, in http_request\n",
+      "    raise MlflowException(\"API request to %s failed with exception %s\" % (url, e))\n",
+      "mlflow.exceptions.MlflowException: API request to http://127.0.0.1:5000/api/2.0/mlflow/experiments/list failed with exception HTTPConnectionPool(host='127.0.0.1', port=5000): Max retries exceeded with url: /api/2.0/mlflow/experiments/list?view_type=ALL (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4bbd784ee0>: Failed to establish a new connection: [Errno 111] Connection refused'))\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "(exp-tracking-env) ubuntu@ip-172-31-4-164:~/mlops-zoomcamp/02-experiment-tracking/homework$ python hpo.py --data_path processed_data/\n",
-    "100%|█████████████████████████████████████████████████████████████████████████████████████████| 50/50 [08:44<00:00, 10.48s/trial, best loss: 6.6284257482044735]\n",
+    "100%|█████████████████████████████████████████████████████████████████████████████████████████| 50/50 \n",
+    "[08:44<00:00, 10.48s/trial, best loss: 6.6284257482044735]\n",
     "(exp-tracking-env) ubuntu@ip-172-31-4-164:~/mlops-zoomcamp/02-experiment-tracking/homework$ "
    ]
   },
