--- a/03-orchestration/homework/week3_orchestration_hw.ipynb
+++ b/03-orchestration/homework/week3_orchestration_hw.ipynb
@@ -273,6 +273,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![alt text](https://raw.githubusercontent.com/thamizhannal/mlops-zoomcamp/main/03-orchestration/homework/flow_schedule.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q6. Creating a work-queue\n",
     "\n",
     "In order to run this flow, you will need an agent and a work queue. Because we scheduled our flow on every month, it won't really get picked up by an agent. For this exercise, create a work-queue from the UI and view it using the CLI.\n",
